XWIKI-21103: Add support for executing actions on the page tree from a context menu * Fix the build * Align the node actions with the node label.

--- a/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-webjar/src/main/less/tree.less
+++ b/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-webjar/src/main/less/tree.less
@@ -191,6 +191,7 @@ body.modal-open > .jstree-xwiki-contextmenu {
   position: absolute;
   right: 3px;
   top: 3px;
+  line-height: 24px;
 }
 
 .jstree-xwiki .jstree-node-actions button {
